<resources>
    <string name="app_name">Bill</string>
    <string name="no_of_items">No of Items:</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="dot">.</string>
    <string name="x">x</string>
    <string name="add_item">Add Item</string>
    <string name="done">Done</string>
    <string name="total_amount">Total Amount:</string>
    <string name="_0_00">0.00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="bc">bc</string>
    <string name="_00">0</string>
    <string name="total_bill">Total Bill</string>
    <string name="_0_00_x_0">0.00 x 0</string>
    <string name="__0_00">0.00</string>
    <string name="__0">0</string>
    <string name="item">item:</string>
    <string name="empty">\</string>
</resources>