<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ListView
            android:id="@+id/list_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0D0D8"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#B0D0D8"
                    android:text="@string/no_of_items"
                    android:textColor="#006064"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/item_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#B0D0D8"
                    android:text="@string/_0"
                    android:textColor="#006064"
                    android:textSize="18sp" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="#B0D0D8"
                        android:textSize="25sp"
                        android:text="@string/total_amount"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/total_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="#B0D0D8"
                        android:text="@string/_0_00"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="viewEnd"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/display"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edt1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="30sp"

                />
            <TextView
                android:id="@+id/edt_op"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/edt1"

                />
            <TextView
                android:id="@+id/edt2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:inputType="number"
                android:layout_toEndOf="@id/edt_op"

                />



        </RelativeLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/selector"
                android:text="@string/_1"
                android:textColor="#ecf0f1"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/selector"
                android:text="@string/_2"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/selector"
                android:text="@string/_3"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_backspace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/operator_selector"
                android:drawableStart="@drawable/ic_baseline_backspace_24"
                android:paddingStart="30dip"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/selector"
                android:text="@string/_4"
                android:textColor="#ecf0f1"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/selector"
                android:text="@string/_5"
                android:textColor="#ecf0f1"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/selector"
                android:text="@string/_6"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.25"
                android:background="@drawable/operator_selector"
                android:text="@string/c"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                tools:ignore="NestedWeights">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:background="@drawable/selector"
                        android:text="@string/_7"
                        android:textColor="#ecf0f1"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:background="@drawable/selector"
                        android:text="@string/_8"
                        android:textColor="#ecf0f1"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:background="@drawable/selector"
                        android:text="@string/_9"
                        android:textColor="#ecf0f1"
                        android:textSize="20sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonDot"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:background="@drawable/selector"
                        android:text="@string/dot"
                        android:textColor="#ecf0f1"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.25"
                        android:background="@drawable/selector"
                        android:text="@string/_0"
                        android:textColor="#ecf0f1"
                        android:textSize="20sp"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonmul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.1"
                android:background="@drawable/operator_selector"
                android:text="@string/x"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/button"
                android:text="@string/add_item"
                android:textColor="#ecf0f1"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_done"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_done"
                android:text="@string/done"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />

        </LinearLayout>




    </LinearLayout>


</LinearLayout>